--- a/client/public/index.html
+++ b/client/public/index.html
@@ -24,7 +24,7 @@
     -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
 
-  <title>React App</title>
+  <title>Docker Inspector</title>
 </head>
 
 <body>
